Fix delete
