# src/docs/swagger.json
@@ -1289,6 +1289,52 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete book from shelf",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bookshelf"
+                ],
+                "summary": "Delete book from shelf",
+                "operationId": "delete-book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Book ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDetails"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDetails"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/errors.ErrorDetails"
+                        }
+                    }
+                }
             }
         },
         "/users/{id}": {
@@ -1681,7 +1727,7 @@
                 "author_name": {
                     "type": "string"
                 },
-                "avg_rating": {
+                "avg_ratings": {
                     "type": "number"
                 },
                 "book_id": {
